# onchainos-skills

./: .claude-docs-path  .env.example  .eslintignore  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE_TASK.md  CONTRIBUTING.md  README.md  dep.json  install-skills.sh  install.ps1  install.sh  learning-points-diagrams.drawio  market-test-cases.json  pack-task.sh  package-lock.json  package.json  run.sh  test-cases.json  xlayer-recommendation-plan.md
cli/: Cargo.toml
cli/src/: audit.rs  chains.rs  client.rs  crypto.rs  file_keyring.rs  keyring_store.rs  main.rs  output.rs  payment_cache.rs  payment_notify.rs  permit2_eip712.rs  permit2_rpc.rs  permit2_sign.rs  permit2_types.rs  subscription_cache.rs  subscription_facilitator.rs  subscription_sign.rs  token_alias.rs  validators.rs  wallet_api.rs  wallet_store.rs
cli/src/commands/: common.rs  competition.rs  cross_chain.rs  defi.rs  enums.rs  file.rs  gateway.rs  leaderboard.rs  market.rs  memepump.rs  mod.rs  portfolio.rs  predict.rs  security.rs  signal.rs  sink.rs  skills.rs  social.rs  swap.rs  token.rs  tracker.rs  upgrade.rs  ws.rs
cli/src/commands/agent_commerce/: mod.rs
cli/src/commands/agentic_wallet/: account.rs  auth.rs  balance.rs  broadcast.rs  chain.rs  common.rs  debug_dump.rs  gas_station.rs  geoblock.rs  history.rs  locale.rs  mod.rs  payment.rs  payment_flow.rs  plugin.rs  sign.rs  sign_message.rs  transfer.rs  wallet.rs
cli/src/commands/defi/: api.rs  helpers.rs  mod.rs  operations.rs
cli/src/commands/payment/: a2a_pay.rs  addr.rs  decode_receipt.rs  dispatcher.rs  http_carrier.rs  (+7 more)
cli/src/doh/: binary.rs  cache.rs  manager.rs  mod.rs  types.rs  ws.rs
cli/src/mcp/: mod.rs
cli/src/payment/: mod.rs
cli/src/watch/: daemon.rs  store.rs  types.rs
cli/tests/: cli_command_layout.rs  cli_competition_sink.rs  cli_cross_chain.rs  cli_defi.rs  cli_draft.rs  cli_gateway.rs  cli_leaderboard.rs  cli_market.rs  cli_payment.rs  cli_portfolio.rs  cli_signal.rs  cli_social.rs  cli_swap.rs  cli_token.rs  cli_tracker.rs  cli_wallet.rs  cli_wallet_login_mode.rs  cli_wallet_login_phase.rs  cli_wallet_testnet.rs  cli_workflows.rs  mcp_server.rs
cli/tests/common/: mod.rs
tools/ws-mock/: Cargo.toml  README.md  mock-tasks.json
tools/ws-mock/src/: lib.rs  mock_agent.rs  server.rs
(+714 files in other folders)
