[package]
name = "onchainos-cli"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "onchainos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
dirs = "6"
rpassword = "7"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }

# Encryption
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
zeroize = "1"

# HD derivation + signing
bip39 = "2.1"
coins-bip32 = "0.13"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
tiny-keccak = { version = "2", features = ["keccak"] }
bs58 = "0.5"

# EVM transaction building
alloy-consensus = "1"
alloy-signer-local = "1"
alloy-primitives = "1"
alloy-rlp = "0.3"
alloy-network = "1"

# Utils
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
